SE AGREGA CREACION DE CARTA Y SE AGREGAN NUEVAS DEPENDENCIAS

--- a/src/app/plantillas-componet/plantillas-componet.component.html
+++ b/src/app/plantillas-componet/plantillas-componet.component.html
@@ -1,1 +1,42 @@
-<p>plantillas-componet works!</p>
+
+
+<div id="content" class="page" style="opacity: 0.0; position: fixed;">
+    <p>
+
+    <p>
+        <br>
+    <form>
+        <br><br><br><br>
+
+        <div class="letra2">
+            <mat-label>Guatemala {{dia}} de {{mes}} de {{anio}} </mat-label>
+        </div>
+        <br><br><br><br><br>
+        <div class="letra">
+            <mat-label>Estimado(a) {{destinatario?.nombreDestinatario}} {{destinatario?.apellidoDestinatario}} </mat-label>
+        </div>
+
+        <br><br>
+          <div class="letra">
+            <div>{{destinatario?.cuerpo}}</div>
+          </div>
+
+          <br><br>  <br>
+          <div class="letra">
+            <div>Atentamente</div>
+          </div>
+
+          <br><br>  <br>
+          <div class="letra3">
+            <div>{{destinatario?.remitente}}</div>
+          </div>
+          <br>  
+          <div class="letra3">
+            <div>{{destinatario?.puesto}}</div>
+          </div>
+          <br> 
+          <div class="letra3">
+            <div>{{destinatario?.telefono}}</div>
+          </div>
+    </form>
+</div>
